nird/apps/taxhub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxhub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taxhub
  template:
    metadata:
      labels:
        app: taxhub
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: taxhub
          image: ghcr.io/elixir-metatrack/taxhub:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
