nird/apps/taxhub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxhub
spec:
  selector:
    app: taxhub
  ports:
    - port: 80
      targetPort: 8080
